# cxx-rust-demo

./: .gitignore  Cargo.toml  README.md  embind.cc  library_wbg.js  post.js  pre.js  random_point_generator.cc  random_point_generator.h
.cargo/: config.toml
src/: lib.rs
