[package]
name = "cxxrustdemo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
# change to cdylib if you want to produce just a .wasm file from the rust.
# crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
wasm-bindgen = { path = "../wasm-bindgen" }
# wasm-bindgen = "0.2.99"
# necessary if you want to target wasm32-unknown-unknown
# getrandom = { version = "0.2", features = ["js"] }
